# cloudwedge

./: .gitignore  .gitlab-ci.yml  404.html  CNAME  LICENSE  LICENSE.txt  README.md  index.html  package-lock.json  package.json  pyproject.toml  retype.yml  robots.txt
.github/workflows/: README.md  dev.yml  prd.yml  retype.yml
about/: index.html
app/: cloudwedge-spoke.yaml  cloudwedge.yaml
app/config/: local.env.json
app/references/: autoscaling.event.json  boto3-tagging-api.py  example_ec2_template.json  example_rds_template.json  sqs.dashboard.source.json
app/resources/: cloudwedge-alerter.steps.json  cloudwedge-builder.steps.json  cloudwedge-stack-status.steps.json
app/src/check_status/: app.py  index.py  (+1 more)
contributing/: index.html
docs/: README.md  about.md  contributing.md  faq.md  license.md  roadmap.md
docs/guides/: alarms.md  getting-started.md  scenarios.md  tags.md
docs/services/: index.md
faq/: index.html
guides/alarms/: index.html
guides/getting-started/: index.html
guides/scenarios/: index.html
guides/tags/: index.html
license/: index.html
publishing/: README.md  cw-artifact-bucket.yaml  docs-infra.yaml  publishing.yaml
publishing/scripts/: app-build.sh  app-infra.sh  app-publish.sh  build.sh  deploy.sh  docs-infra.sh  docs-sync.sh  docs.sh  publish.sh  when-gitlab-is-down-scripts.sh
references/: local-deploy.sh  local-publish.sh  original-gitlab-ci.yml
resources/js/: config.js  prism.js  search.json
roadmap/: index.html
services/: index.html
tags/: index.html
tags/examples/: index.html
tags/guide/: index.html
(+67 files in other folders)
