[tool.poetry]
name = "cloudwedge"
version = "0.1.0"
description = ""
authors = ["cloudwedge <dev@cloudwedge.io>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
boto3 = "^1.14.38"

[tool.poetry.dev-dependencies]
debugpy = "^1.0.0-rc.2"

[tool.isort]
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
